finalised assignment and added my analysis

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -9,7 +9,11 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- We can see there is a strong positive correlation between mouse weight and tumor volume for the Capomulin Drug Regimen. The correlation value is 0.84. "
+    "- We can observe a strong positive correlation between mouse weight and tumor volume for the Capomulin Drug Regimen. The correlation value is 0.84. \n",
+    "\n",
+    "- Additioanlly, we can observe from the scatterplot for the Capomulin regimen there is a positive correlation between the avg. tumor size (mm3) and weight (g).  The visualisation of the data confirms our analysis from above. \n",
+    "\n",
+    "- We can observe the outlier for the Ibunifol regimen both on the box plot and the for loop with if-statement. We can confirm evaluating the data and creating a visual represenatation of the data can draw similar conclusions. \n"
    ]
   },
   {
@@ -1170,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1365,7 @@
        "[248 rows x 8 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1623,7 @@
        "24  31.023923  33.562402  60.918767  61.433892"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1673,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1770,7 +1774,7 @@
        "3  15.577752      68.923185      45.000000  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1809,24 +1813,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Infubinol has an outlier value of 36.321345799999996. It is below the lower bound of 36.83290494999999.\n"
+      "IQR of Capomulin: 7.781863460000004\n",
+      "\n",
+      "\n",
+      "IQR of Ramicane: 9.098536719999998\n",
+      "\n",
+      "\n",
+      "IQR of Infubinol: 11.477135160000003\n",
+      "ALERT: Infubinol lower bound outlier: 36.321345799999996\n",
+      "\n",
+      "\n",
+      "IQR of Ceftamin: 15.577752179999997\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(f'{treatment_list[2]} has an outlier value of {min_inf}. It is below the lower bound of {inf_lower}.')"
+    "#counter for print statements\n",
+    "counter = 0\n",
+    "for rows in drug_regimen_analysis_df:\n",
+    "    if counter < 4:\n",
+    "        print(f\"IQR of {drug_regimen_analysis_df['Drug Regimen'][counter]}: {drug_regimen_analysis_df['IQR'][counter]}\")\n",
+    "        #check for outliers\n",
+    "        #check 0.75 quart.\n",
+    "        if drug_regimen_analysis_df['Max Tumor Vol'][counter] > drug_regimen_analysis_df['Upper Bound'][counter]:\n",
+    "              print(f\"{drug_regimen_analysis_df['Drug Regimen'][counter]} upper bound outlier: {rug_regimen_analysis_df['Max Tumor Vol'][counter]}\")\n",
+    "        if drug_regimen_analysis_df['Min Tumor Vol'][counter] < drug_regimen_analysis_df['Lower Bound'][counter]:\n",
+    "              print(f\"ALERT: {drug_regimen_analysis_df['Drug Regimen'][counter]} lower bound outlier: {drug_regimen_analysis_df['Min Tumor Vol'][counter]}\")\n",
+    "        print(\"\\n\")\n",
+    "        counter +=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2036,7 +2064,7 @@
        "1889  Male          18          17  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2049,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2080,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2116,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2141,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
